# stc-b-project

./: -dumpmachine.LST  .clang-format  Cargo.toml  bsp.code-workspace  main.go  platformio.ini
.eide/: eide.json  release.8051.options.keil.json
c51/: adc.h  beep.h  def.h  display.h  hall.h  key.h  nvm.h  rtc.h  sys.h  timer.h  uart.h  vib.h
c51/detail/: sys.h  uart.h
c51/ext/: display.h
iic/: iic.h
inc/: adc.h  beep.h  def.h  display.h  key.h  rtc.h  sys.h  uart.h  use.h
md/: task.md
oled/inc/: ssd1306.h
oled/src/: ssd1306.c
pro/: main.c
src/: adc.c  beep.c  display.c  hall.c  key.c  lib.c  main.c  main.cpp  main.rs  nvm.c  rtc.c  sys.c  timer.c  uart.c  uart1.c  uart2.c  vib.c
test/: main.c
