[package]
name = "bltest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["tokio"] }
tokio = { version = "1.29.1", features = ["full"] }
iced_futures = "0.7.0"
serialport = "4.2.2"
